# zvec

./: .clang-tidy  .gitignore  CMakeLists.txt  NOTICE  pyproject.toml  test_unrotate.py
.github/cmake/subproject-integration/: CMakeLists.txt
.github/workflows/: 01-ci-pipeline.yml  03-macos-linux-build.yml  04-android-build.yml  05-windows-build.yml  06-ios-build.yml  07-linux-riscv-build.yml  08-cmake-subproject-integration.yml  build_wheel_on_windows.yml  clang_tidy.yml  nightly_coverage.yml
cmake/: bazel.cmake  option.cmake
config/: construct.yaml  construct2.yaml  search_baseline.yaml  search_baseline2.yaml  search_current.yaml  search_current2.yaml  search_tmp.yaml
doc/: draft.md
examples/c++/: CMakeLists.txt
examples/python/: int8_rotate_build.py  int8_rotate_query.py
python/tests/: test_collection.py  test_params.py  test_reranker.py
python/tests/detail/: test_collection_dql.py
python/zvec/: __init__.py  __init__.pyi
python/zvec/executor/: query_executor.py
python/zvec/extension/: __init__.py  multi_vector_reranker.py  qwen_rerank_function.py  rerank_function.py  sentence_transformer_rerank_function.py
python/zvec/model/param/: __init__.py  __init__.pyi
src/: CMakeLists.txt
src/ailego/: CMakeLists.txt
src/ailego/buffer/: block_eviction_queue.cc
src/ailego/utility/: float_helper.cc  memory_helper.cc  memory_helper.h
src/binding/c/: CMakeLists.txt  c_api.cc
src/binding/python/: CMakeLists.txt
src/binding/python/model/: python_doc.cc  python_reranker.cc
src/binding/python/model/param/: python_param.cc
src/core/: CMakeLists.txt
src/core/algorithm/diskann/: CMakeLists.txt  diskann_context.cc  diskann_context.h  diskann_file_reader.h  diskann_indexer.cc  diskann_streamer.cc
src/core/algorithm/flat/: flat_streamer.cc  flat_utility.h
src/core/algorithm/hnsw/: CMakeLists.txt  hnsw_algorithm.cc  hnsw_algorithm.h  hnsw_chunk.cc  hnsw_chunk.h  hnsw_context.cc  hnsw_context.h  hnsw_entity.h  hnsw_streamer_entity.cc  hnsw_streamer_entity.h
src/core/algorithm/hnsw_rabitq/: hnsw_rabitq_chunk.cc  hnsw_rabitq_chunk.h  hnsw_rabitq_context.cc  hnsw_rabitq_dist_calculator.h  hnsw_rabitq_entity.cc  hnsw_rabitq_entity.h  hnsw_rabitq_query_algorithm.h  hnsw_rabitq_streamer.cc  hnsw_rabitq_streamer_entity.cc  hnsw_rabitq_streamer_entity.h  rabitq_reformer.cc  rabitq_reformer.h  rabitq_utils.h
src/core/algorithm/hnsw_sparse/: hnsw_sparse_chunk.cc  hnsw_sparse_chunk.h  hnsw_sparse_context.cc  hnsw_sparse_entity.h  hnsw_sparse_streamer_entity.cc  hnsw_sparse_streamer_entity.h
src/core/algorithm/ivf/: ivf_entity.cc  ivf_entity.h  ivf_params.h  ivf_searcher.cc  ivf_searcher_context.h  ivf_streamer.cc
src/core/algorithm/vamana/: vamana_algorithm.cc  vamana_algorithm.h  vamana_context.cc  vamana_context.h  vamana_dist_calculator.h  vamana_entity.h  vamana_streamer.cc  vamana_streamer.h  vamana_streamer_entity.cc  vamana_streamer_entity.h
src/core/interface/: index.cc  index_param.cc
src/core/interface/indexes/: diskann_index.cc  ivf_index.cc
src/core/metric/: metric_params.h  quantized_integer_metric.cc  uniform_int8_metric.cc
src/core/plugin/: diskann_plugin.cc
src/core/quantizer/: CMakeLists.txt  cosine_converter.cc  cosine_reformer.cc  integer_quantizer_converter.cc  integer_quantizer_reformer.cc  quantizer_params.h  record_rotater.cc  record_rotater.h  record_rotator.cc  record_rotator.h  uniform_int8_converter.cc  uniform_int8_reformer.cc
src/core/utility/: CMakeLists.txt  block_heap.cc  block_heap.h  buffer_storage.cc  linear_pool.h
src/db/: CMakeLists.txt  collection.cc
src/db/common/: rocksdb_context.cc
src/db/index/column/vector_column/: engine_helper.hpp
src/db/index/common/: doc.cc  proto_converter.cc  query.cc  schema.cc
src/db/index/segment/: segment.cc  segment_helper.cc
src/db/proto/: zvec.proto
src/db/reranker/: reranker.cc
src/db/sqlengine/: sqlengine_impl.cc
src/db/sqlengine/planner/: query_planner.cc
src/db/sqlengine/planner/ops/: contain_op.cc
src/include/zvec/: c_api.h
src/include/zvec/ailego/internal/: platform.h
src/include/zvec/ailego/utility/: string_helper_impl.h
src/include/zvec/core/framework/: index_converter.h  index_holder.h  index_metric.h  index_segment_storage.h
src/include/zvec/core/interface/: index_param.h  index_param_builders.h
src/include/zvec/db/: index_params.h  query.h  reranker.h  schema.h
src/include/zvec/turbo/: turbo.h
src/turbo/: turbo.cc
src/turbo/avx512_vnni/record_quantized_int8/: common.h
src/turbo/avx512_vnni/uniform_int8/: quantize.cc  quantize.h  squared_euclidean.cc  squared_euclidean.h
tests/c/: c_api_test.c
tests/core/algorithm/diskann/: CMakeLists.txt
tests/core/algorithm/vamana/: vamana_streamer_test.cc
tests/core/quantizer/: uniform_int8_reformer_test.cc
tests/core/utility/: CMakeLists.txt
tests/db/: CMakeLists.txt  collection_test.cc  reranker_test.cc
tests/db/crash_recovery/: CMakeLists.txt
tests/db/index/: CMakeLists.txt
tests/db/sqlengine/: CMakeLists.txt
tools/core/: local_builder.cc  local_builder_original.cc  txt2vecs.cc  vecs_common.h  vecs_reader.h
